--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,9 @@
-.triangle {
+/* .triangle {
     margin-top: 35px;
     width: 0;
     height: 0;
-    border-right: 250px solid transparent;
+    border-right: 500px solid transparent;
     border-top: 250px solid transparent;
-    border-left: 250px solid #8fa8a6;
-    border-bottom: 250px solid #8fa8a6;
-}
+    border-left: 400px solid #ffd803;
+    border-bottom: 250px solid #ffd803;
+} */
